lib/dmp40/TLDFM.h

ViStatus _VI_FUNC TLDFM_set_segment_voltage           (ViSession instrumentHandle,
                                                       ViUInt32  segmentIndex,
                                                       ViReal64  segmentVoltage);
ViStatus _VI_FUNC TLDFM_get_segment_voltages          (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[]);
ViStatus _VI_FUNC TLDFM_set_segment_voltages          (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[]);
//******************************************************************************
// tilt element voltage functions

ViStatus _VI_FUNC TLDFM_get_tilt_voltage              (ViSession instrumentHandle,
                                                       ViUInt32  tiltIndex,
                                                       ViReal64* pTiltVoltage);
ViStatus _VI_FUNC TLDFM_set_tilt_voltage              (ViSession instrumentHandle,
                                                       ViUInt32  tiltIndex,
                                                       ViReal64  tiltVoltage);
ViStatus _VI_FUNC TLDFM_get_tilt_voltages             (ViSession instrumentHandle,
                                                       ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_set_tilt_voltages             (ViSession instrumentHandle,
                                                       ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_set_tilt_amplitude_angle      (ViSession instrumentHandle,
                                                       ViReal64  amplitute,
                                                       ViReal64  angle);
//******************************************************************************
// convenience voltage functions
// sets the voltages for all segments and all tilt elements

ViStatus _VI_FUNC TLDFM_get_voltages                  (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[],
                                                       ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_set_voltages                  (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[],
                                                       ViReal64  tiltVoltages[]);
//******************************************************************************
// device information functions

ViStatus _VI_FUNC TLDFM_get_manufacturer_name         (ViSession instrumentHandle,
                                                       ViChar    manufacturerName[]);
ViStatus _VI_FUNC TLDFM_get_instrument_name           (ViSession instrumentHandle,
                                                       ViChar    instrName[]);
ViStatus _VI_FUNC TLDFM_set_instrument_name           (ViSession instrumentHandle,
                                                       ViChar    instrName[]);
ViStatus _VI_FUNC TLDFM_get_serial_Number             (ViSession instrumentHandle,
                                                       ViChar    serialNumber[]);
ViStatus _VI_FUNC TLDFM_set_serial_number             (ViSession instrumentHandle,
                                                       ViChar    serialNumber[]);
ViStatus _VI_FUNC TLDFM_get_user_text                 (ViSession instrumentHandle,
                                                       ViChar    userText[]);
ViStatus _VI_FUNC TLDFM_set_user_text                 (ViSession instrumentHandle,
                                                       ViChar    userText[]);
ViStatus _VI_FUNC TLDFM_update_firmware               (ViSession instrumentHandle,
                                                       ViChar    firmwareFile[]);
ViStatus _VI_FUNC TLDFM_enable_event                  (ViSession instrumentHandle);
ViStatus _VI_FUNC TLDFM_disable_event                 (ViSession instrumentHandle);