src/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_segment_voltage(ViSession, ViUInt32, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:58</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_segment_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 segmentIndex, TLDFM_64Library.ViReal64 segmentVoltage) {
		return Pointer.pointerToAddress(TLDFM_set_segment_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentIndex), Pointer.getPeer(segmentVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_set_segment_voltage(@Ptr long instrumentHandle, @Ptr long segmentIndex, @Ptr long segmentVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:62</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_segment_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_segment_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_segment_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:65</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_segment_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages) {
		return Pointer.pointerToAddress(TLDFM_set_segment_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_set_segment_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * tilt element voltage functions<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_tilt_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:71</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_tilt_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 tiltIndex, Pointer<TLDFM_64Library.ViReal64 > pTiltVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_tilt_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltIndex), Pointer.getPeer(pTiltVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_tilt_voltage(@Ptr long instrumentHandle, @Ptr long tiltIndex, @Ptr long pTiltVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_tilt_voltage(ViSession, ViUInt32, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:75</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_tilt_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 tiltIndex, TLDFM_64Library.ViReal64 tiltVoltage) {
		return Pointer.pointerToAddress(TLDFM_set_tilt_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltIndex), Pointer.getPeer(tiltVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_set_tilt_voltage(@Ptr long instrumentHandle, @Ptr long tiltIndex, @Ptr long tiltVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:79</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_tilt_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_tilt_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_tilt_voltages(@Ptr long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:82</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_tilt_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_set_tilt_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_set_tilt_voltages(@Ptr long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_tilt_amplitude_angle(ViSession, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:85</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_tilt_amplitude_angle(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViReal64 amplitute, TLDFM_64Library.ViReal64 angle) {
		return Pointer.pointerToAddress(TLDFM_set_tilt_amplitude_angle(Pointer.getPeer(instrumentHandle), Pointer.getPeer(amplitute), Pointer.getPeer(angle)));
	}
	@Ptr 
	protected native static long TLDFM_set_tilt_amplitude_angle(@Ptr long instrumentHandle, @Ptr long amplitute, @Ptr long angle);
	/**
	 * sets the voltages for all segments and all tilt elements<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:93</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:97</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_set_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_set_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
	/**
	 * device information functions<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_manufacturer_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:104</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_manufacturer_name(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > manufacturerName) {
		return Pointer.pointerToAddress(TLDFM_get_manufacturer_name(Pointer.getPeer(instrumentHandle), Pointer.getPeer(manufacturerName)));
	}
	@Ptr 
	protected native static long TLDFM_get_manufacturer_name(@Ptr long instrumentHandle, @Ptr long manufacturerName);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_instrument_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:107</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_instrument_name(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > instrName) {
		return Pointer.pointerToAddress(TLDFM_get_instrument_name(Pointer.getPeer(instrumentHandle), Pointer.getPeer(instrName)));
	}
	@Ptr 
	protected native static long TLDFM_get_instrument_name(@Ptr long instrumentHandle, @Ptr long instrName);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_instrument_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:110</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_instrument_name(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > instrName) {
		return Pointer.pointerToAddress(TLDFM_set_instrument_name(Pointer.getPeer(instrumentHandle), Pointer.getPeer(instrName)));
	}
	@Ptr 
	protected native static long TLDFM_set_instrument_name(@Ptr long instrumentHandle, @Ptr long instrName);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_serial_Number(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:113</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_serial_Number(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > serialNumber) {
		return Pointer.pointerToAddress(TLDFM_get_serial_Number(Pointer.getPeer(instrumentHandle), Pointer.getPeer(serialNumber)));
	}
	@Ptr 
	protected native static long TLDFM_get_serial_Number(@Ptr long instrumentHandle, @Ptr long serialNumber);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_serial_number(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:116</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_serial_number(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > serialNumber) {
		return Pointer.pointerToAddress(TLDFM_set_serial_number(Pointer.getPeer(instrumentHandle), Pointer.getPeer(serialNumber)));
	}
	@Ptr 
	protected native static long TLDFM_set_serial_number(@Ptr long instrumentHandle, @Ptr long serialNumber);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_user_text(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:119</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_user_text(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > userText) {
		return Pointer.pointerToAddress(TLDFM_get_user_text(Pointer.getPeer(instrumentHandle), Pointer.getPeer(userText)));
	}
	@Ptr 
	protected native static long TLDFM_get_user_text(@Ptr long instrumentHandle, @Ptr long userText);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_user_text(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:122</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_user_text(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > userText) {
		return Pointer.pointerToAddress(TLDFM_set_user_text(Pointer.getPeer(instrumentHandle), Pointer.getPeer(userText)));
	}
	@Ptr 
	protected native static long TLDFM_set_user_text(@Ptr long instrumentHandle, @Ptr long userText);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_update_firmware(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:125</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_update_firmware(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > firmwareFile) {
		return Pointer.pointerToAddress(TLDFM_update_firmware(Pointer.getPeer(instrumentHandle), Pointer.getPeer(firmwareFile)));
	}
	@Ptr 
	protected native static long TLDFM_update_firmware(@Ptr long instrumentHandle, @Ptr long firmwareFile);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_enable_event(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:128</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_enable_event(TLDFM_64Library.ViSession instrumentHandle) {
		return Pointer.pointerToAddress(TLDFM_enable_event(Pointer.getPeer(instrumentHandle)));
	}
	@Ptr 
	protected native static long TLDFM_enable_event(@Ptr long instrumentHandle);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_disable_event(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:130</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_disable_event(TLDFM_64Library.ViSession instrumentHandle) {
		return Pointer.pointerToAddress(TLDFM_disable_event(Pointer.getPeer(instrumentHandle)));
	}
	@Ptr 
	protected native static long TLDFM_disable_event(@Ptr long instrumentHandle);
